apps/react-app-5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-5
  labels:
    app.kubernetes.io/name: react-app-5
    tinycloud.io/managed-by: platform
spec:
  selector:
    app.kubernetes.io/name: react-app-5
  ports:
    - port: 80
      targetPort: http
      name: http
